internal/assets/static/main.css
/* ... */
kbd:active {
    transform: translateY(2px);
    box-shadow: 0 0 0 0 var(--color-widget-background-highlight);
}

.popover-container, [data-popover-html] {
    display: none;
}

.popover-container {
    --triangle-size: 10px;
    --triangle-offset: 50%;
    --triangle-margin: calc(var(--triangle-size) + 3px);
    --entrance-y-offset: 8px;
    --entrance-direction: calc(var(--entrance-y-offset) * -1);

    z-index: 20;
    position: absolute;
    padding-top: var(--triangle-margin);
    padding-inline: var(--content-bounds-padding);
}

.popover-container.position-above {
    --entrance-direction: var(--entrance-y-offset);
    padding-top: 0;
    padding-bottom: var(--triangle-margin);
}

.popover-frame {
    --shadow-properties: 0 15px 20px -10px;
    --shadow-color: hsla(var(--bghs), calc(var(--bgl) * 0.2), 0.5);
    position: relative;
    padding: 10px;
    background: var(--color-popover-background);
    border: 1px solid var(--color-popover-border);
    border-radius: 5px;
    animation: popoverFrameEntrance 0.3s backwards cubic-bezier(0.16, 1, 0.3, 1);
    box-shadow: var(--shadow-properties) var(--shadow-color);
}

.popover-frame::before {
    content: '';
    position: absolute;
    width: var(--triangle-size);
    height: var(--triangle-size);
    transform: rotate(45deg);
    background-color: var(--color-popover-background);
    border-top-left-radius: 2px;
    border-left: 1px solid var(--color-popover-border);
    border-top: 1px solid var(--color-popover-border);
    left: calc(var(--triangle-offset) - (var(--triangle-size) / 2));
    top: calc(var(--triangle-size) / 2 * -1 - 1px);
}

.popover-container.position-above .popover-frame::before {
    transform: rotate(-135deg);
    top: auto;
    bottom: calc(var(--triangle-size) / 2 * -1 - 1px);
}

.popover-container.position-above .popover-frame {
    --shadow-properties: 0 10px 20px -10px;
}

@keyframes popoverFrameEntrance {
    from {
        opacity: 0;
        transform: translateY(var(--entrance-direction));
    }
}

.summary {
    width: 100%;
    cursor: pointer;
    word-spacing: -0.18em;
    user-select: none;
    list-style: none;
    position: relative;
    display: flex;
}

.details[open] .summary {
    margin-bottom: .8rem;
}

.summary::before {
    content: "";
    position: absolute;
    inset: -.3rem -.8rem;
    border-radius: var(--border-radius);
    background-color: var(--color-widget-background-highlight);
    opacity: 0;
    transition: opacity 0.2s;
    z-index: -1;
}

.details[open] .summary::before, .summary:hover::before {
    opacity: 1;
}

.summary::after {
    content: "◀";
    font-size: 1.2em;
    position: absolute;
    top: 0;
    bottom: 0;
    line-height: 1.3em;
    right: 0;
    transition: rotate .5s cubic-bezier(0.22, 1, 0.36, 1);
}

details[open] .summary::after {
    rotate: -90deg;
}

.content-bounds {
    max-width: 1600px;
    width: 100%;
    margin-inline: auto;
    padding: 0 var(--content-bounds-padding);
}

.page-width-wide .content-bounds {
    max-width: 1920px;
}

.page-width-slim .content-bounds {
    max-width: 1100px;
}

.page-center-vertically .page {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

/* TODO: refactor, otherwise I hope I never have to change dynamic columns again */
.dynamic-columns {
    --list-half-gap: 0.5rem;
    gap: var(--widget-content-vertical-padding) var(--widget-content-horizontal-padding);
    display: grid;
    grid-template-columns: repeat(var(--columns-per-row), 1fr);
}

.dynamic-columns > * {
    padding-left: var(--widget-content-horizontal-padding);
    border-left: 1px solid var(--color-separator);
    min-width: 0;
}

.dynamic-columns > *:first-child {
    padding-top: 0;
    border-top: none;
    border-left: none;
}

.dynamic-columns:has(> :nth-child(1)) { --columns-per-row: 1; }
.dynamic-columns:has(> :nth-child(2)) { --columns-per-row: 2; }
.dynamic-columns:has(> :nth-child(3)) { --columns-per-row: 3; }
.dynamic-columns:has(> :nth-child(4)) { --columns-per-row: 4; }
.dynamic-columns:has(> :nth-child(5)) { --columns-per-row: 5; }

@container widget (max-width: 599px) {
    .dynamic-columns { gap: 0; }
    .dynamic-columns:has(> :nth-child(1)) { --columns-per-row: 1; }
    .dynamic-columns > * {
        border-left: none;
        padding-left: 0;
    }
    .dynamic-columns > *:not(:first-child) {
        margin-top: calc(var(--list-half-gap) * 2);
    }
    .dynamic-columns.list-with-separator > *:not(:first-child) {
        margin-top: var(--list-half-gap);
        border-top: 1px solid var(--color-separator);
        padding-top: var(--list-half-gap);
    }
}
@container widget (min-width: 600px) and (max-width: 849px) {
    .dynamic-columns:has(> :nth-child(2)) { --columns-per-row: 2; }
    .dynamic-columns > :nth-child(2n-1) {
        border-left: none;
        padding-left: 0;
    }
}
@container widget (min-width: 850px) and (max-width: 1249px) {
    .dynamic-columns:has(> :nth-child(3)) { --columns-per-row: 3; }
    .dynamic-columns > :nth-child(3n+1) {
        border-left: none;
        padding-left: 0;
    }
}
@container widget (min-width: 1250px) and (max-width: 1499px) {
    .dynamic-columns:has(> :nth-child(4)) { --columns-per-row: 4; }
    .dynamic-columns > :nth-child(4n+1) {
        border-left: none;
        padding-left: 0;
    }
}
@container widget (min-width: 1500px) {
    .dynamic-columns:has(> :nth-child(5)) { --columns-per-row: 5; }
    .dynamic-columns > :nth-child(5n+1) {
        border-left: none;
        padding-left: 0;
    }
}

.cards-vertical {
    flex-direction: column;
}

.cards-horizontal {
    --cards-per-row: 6.5;
}

.cards-horizontal, .cards-vertical {
    --cards-gap: calc(var(--widget-content-vertical-padding) * 0.7);
    display: flex;
    gap: var(--cards-gap);
}

.card {
    display: flex;
    flex-direction: column;
}
/* ... */

